# BCMTools

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.md  INSTALL  LICENSE  License.txt  Makefile.am  Makefile.in  Makefile.inc  NEWS  README  README.md  README.txt  Readme.md  bcm-config.in  config.h.in  configure  configure.ac  diff_20120916_20130417.txt  diff_20120916_20130417_summary.txt  diff_20130417_20130709.txt  diff_20130417_20130709_summary.txt  make_setting.fx  make_setting.gnu  make_setting.intel
BCMViewer/: GridBCM.cpp  GridBCM.h  Makefile  README.txt  Render.cpp  Render.h  SceneGraph.h  main.cpp
BCMViewer/BCMTools/: BCMFileCommon.h  BCMOctree.cpp  BCMOctree.h  Node.h  (+14 more)
FileIO/: README.txt
Utils/: CMakeLists.txt
Utils/include/: BBDivider.h  BCMOctree.h  BCMPolylib.h  Block.h  BlockFactory.h  BoundaryConditionSetterBase.h  BoundaryInfo.h  BoundingBox.h  ConfigBase.h  ConfigFile.h  CylinderDivider.h  Divider.h  MultiRootDivider.h  Node.h  Partition.h  Pedigree.h  PolygonBBoxDivider.h  PolygonDivider.h  RectangleDivider.h  RootGrid.h  SiloWriter.h  SimpleDivider.h  SphereDivider.h
Utils/src/: BCMOctree.cpp  BCMPolylib.cpp  ConfigBase.cpp  ConfigFile.cpp
cmake/: CompileOptionSelector.cmake  FindBCM.cmake  Toolchain_K.cmake  Toolchain_fx10.cmake  Toolchain_fx100.cmake  bcm_package.cmake
doc/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in
doc/doxygen/: Doxyfile
doxygen/: Doxyfile  Makefile.am  Makefile.in  makepdf.sh
examples/: CMakeLists.txt  make_setting.fx  make_setting.gnu  make_setting.ibm  make_setting.intel
examples/FileIO/: README.txt  diff-BCMOctree.cpp  diff-BCMOctree.h  diff-BlockManager.cpp
examples/FileIO/SampleCreator/: BCMPolylib.cpp  BCMPolylib.h  Config.h  Makefile  PolygonDivider.h  main.cpp
examples/FileIO/SampleLoader/: BoundaryConditionSetter.h  Makefile  main.cpp
examples/FileIO/include/: BCMFileCommon.h  BCMFileLoader.h  BCMFileSaver.h  BitVoxel.h  ErrorUtil.h  FileSystemUtil.h  LeafBlockLoader.h  LeafBlockSaver.h  PartitionMapper.h  RLE.h  type.h
examples/FileIO/src/: BCMFileLoader.cpp  BCMFileSaver.cpp  BitVoxel.cpp  ErrorUtil.cpp  FileSystemUtil.cpp  LeafBlockLoader.cpp  LeafBlockSaver.cpp
examples/ParallelMeshGeneration/: BlockBoundingBox.h  Config.h  Makefile  SiloWriter.h  main.cpp  sphere.conf  sphere.tpp  test.conf  test.tpp
examples/ParametricDivider/: BoundaryConditionSetter.h  Config.h  Makefile  Solver.cpp  Solver.h  log_cylinder.4  log_sphere.4  main.cpp  test.conf
examples/PolygonDivider/: BoundaryConditionSetter.h  Config.h  Makefile  Solver.cpp  Solver.h  main.cpp  test.conf  test.xml
examples/PolygonDivider/polylib_patch/: polylib_gcc.patch  polylib_search_nearest.patch
examples/Polylib_2_0_3_Rel/src/: Makefile  depend.inc
examples/Polylib_2_0_3_Rel/src/c_lang/: CPolylib.cxx
examples/Polylib_2_0_3_Rel/src/file_io/: PolylibConfig.cxx  TriMeshIO.cxx
examples/Polylib_2_0_3_Rel/src/groups/: PolygonGroup.cxx
examples/Polylib_2_0_3_Rel_search_nearest/include/: Polylib.h
examples/Polylib_2_0_3_Rel_search_nearest/include/groups/: PolygonGroup.h
examples/Polylib_2_0_3_Rel_search_nearest/include/polygons/: Polygons.h  TriMesh.h  VTree.h
examples/Polylib_2_0_3_Rel_search_nearest/src/: Makefile  Polylib.cxx  depend.inc
examples/Polylib_2_0_3_Rel_search_nearest/src/file_io/: stl.cxx  triangle_id.cxx
examples/Polylib_2_0_3_Rel_search_nearest/src/groups/: PolygonGroup.cxx
examples/Polylib_2_0_3_Rel_search_nearest/src/polygons/: TriMesh.cxx  VTree.cxx
examples/STL_DATA/: bunny-closed-1.stl  cylinder.stl  micra-m.stl  monkey-1.stl  sphere.stl  sphere2.stl
examples/SolverTest/: BlockBoundingBox.h  BlockScalar3D.cpp  BlockScalar3D.h  BoundaryConditionSetter.h  Config.h  ILS3D.h  LocalScalar3D.cpp  LocalScalar3D.h  Makefile  PM.cpp  PM.h  Plot3DWriter.h  Scalar3DUpdater1.cpp  Scalar3DUpdater1.h  Scalar3DUpdater2.cpp  Scalar3DUpdater2.h  Solver.cpp  Solver.h  SphereDivider2.h  SphereDivider3.h  Timing.cpp  Timing.h  VtkWriter.h  bca.f90  bca.h  bcax.f90  bcax.h  bcut.f90  bcut.h  bcx.f90  bcx.h  blas.f90  blas.h  bplt3d.f90  bplt3d.h  bsf3d.f90  bsf3d.h  bstl.f90  bstl.h  cavity.conf  (+13 more)
examples/sor/: BlockFactory.cpp  BlockFactory.h  Config.cpp  Config.h  MakeTree.h  Makefile  Octree.cpp  Timing.h  main.cpp  test.conf
examples/sor1/: BoundaryConditionSetter.h  Config.h  Makefile  Solver.cpp  Solver.h  Timing.cpp  Timing.h  log.4  main.cpp  test.conf
examples/sor2/: BoundaryConditionSetter.h  Config.h  Makefile  Solver.cpp  Solver.h  Timing.cpp  Timing.h  main.cpp  test.conf
examples/sor_vis/: Block.h  BlockFactory.cpp  BoundaryInfo.h  Config.cpp  Config.h  Makefile  Octree.h  PartitionTest.cpp  Solver.cpp  Solver.h  main.cpp  test.conf
examples/sor_vis_2/: Config.cpp  MakeTree.cpp  Timing.cpp  test.conf
examples/test/: Makefile  Solver.h  depend.inc  log  main.cpp  test.conf
examples/util/include/: BBDivider.h  BCMOctree.h  BCMPolylib.h  Block.h  BlockFactory.h  BoundaryConditionSetterBase.h  BoundaryInfo.h  BoundingBox.h  ConfigBase.h  CylinderDivider.h  Divider.h  MultiRootDivider.h  Node.h  Partition.h  Pedigree.h  PolygonBBoxDivider.h  PolygonDivider.h  RectangleDivider.h  RootGrid.h  SiloWriter.h  SimpleDivider.h  SphereDivider.h  SphereDivider2.h  VtkWriter.h
examples/util/src/: BCMOctree.cpp  BCMPolylib.cpp  ConfigBase.cpp
examples/vis/: BlockFactory.cpp  Config.cpp  Config.h  MakeTree.cpp  Makefile  Octree.cpp  Octree.h  Partition.h  Pedigree.h  Solver.cpp  main.cpp  test.conf
include/: BCMTools.h  BlockBase.h  BlockManager.h  CommBuffer.h  DataClass.h  Index3D.h  NeighborInfo.h  PointerSetter.h  Scalar3D.h  Scalar3DUpdater.h  SiloWriter.h  VCUpdater.h  Vec3.h  Vector3D.h  Vector3DUpdater.h  bcm_Version.h  bcm_Version.h.in
src/: BlockManager.cpp  CMakeLists.txt  CommBuffer.cpp  DataClass.list  Makefile  Makefile.am  Makefile.in  Makefile_hand  Scalar3D.cpp  Scalar3DUpdater.cpp  Vector3D.cpp  Vector3DUpdater.cpp
src/Block/: BlockManager.cpp
src/CommBuffer/: CommBuffer.cpp
src/DataClass/: Scalar3D.cpp  Scalar3DUpdater.cpp  Vector3D.cpp  Vector3DUpdater.cpp
(+39 files in other folders)
