##############################
#
# BCMTools
#
# Copyright (C) 2011-2014 Institute of Industrial Science, The University of Tokyo.
# All rights reserved.
#
# Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
##############################

doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_builddir)/doc/BCMTools_ug.pdf
