##############################
#
# BCMTools
#
# Copyright (C) 2011-2013 Institute of Industrial Science, The University of Tokyo.
# All rights reserved.
#
# Copyright (c) 2012-2013 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
##############################

doc_includedir = $(prefix)/doc
doc_include_HEADERS = 

dist_data_DATA = Doxyfile makepdf.sh
